<resources>
    <string name="app_name">ControleEstoque</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_quantity">Quantity</string>
    <string name="lbl_min_quantity">Minimum Amount</string>
    <string name="lbl_price">Unitary Value</string>
    <string name="msg_required">Field required</string>
    <string name="msg_save_success">Product Saved Successfully</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="msg_confirm_delete">Want to delete this record?</string>
    <string name="lbl_yes">Yes</string>
    <string name="msg_delete_success">Delete successful!</string>
    <string name="lbl_no">No</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_delete">Delete</string>
    <string name="nameTitle">Name</string>
    <string name="Loading">Loading</string>
    <string name="update_product_list">Searching Products...</string>
    <string name="lbl_date">Date</string>
</resources>
