<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_name" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_description" />

    <EditText
        android:id="@+id/editTextQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_quantity"
        android:inputType="number"
        android:ems="10"/>

    <EditText
        android:id="@+id/editTextMinQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_min_quantity"
        android:inputType="number"
        android:ems="10"/>

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_price"
        android:inputType="numberDecimal"
        android:ems="10"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_save" />

</LinearLayout>